manifests/istio/istio-oneagent-serviceentries.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: dynatrace-oneagent-hostnames-9999
spec:
  hosts:
  - 13.239.97.12
  location: MESH_EXTERNAL
  ports:
  - number: 9999
    name: https-9999
    protocol: HTTPS
  resolution: DNS
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dynatrace-oneagent-hostnames-9999
spec:
  hosts:
  - 13.239.97.12
  tls:
  - match:
    - port: 9999
      sni_hosts:
      - 13.239.97.12
    route:
    - destination:
        host: 13.239.97.12
        port:
          number: 9999
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: dynatrace-oneagent-hostnames
spec:
  hosts:
  - 13.239.37.170
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: https-443
    protocol: HTTPS
  resolution: DNS
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dynatrace-oneagent-hostnames
spec:
  hosts:
  - 13.239.37.170
  tls:
  - match:
    - port: 443
      sni_hosts:
      - 13.239.37.170
    route:
    - destination:
        host: 13.239.37.170
        port:
          number: 443
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: dynatrace-oneagent-ips
spec:
  hosts:
  - ignored.subdomain #ignored 
  addresses:
  - 10.0.0.1/32
  location: MESH_EXTERNAL
  ports:
    - number: 9999  
      protocol: TCP
      name: tcp-9999
  resolution: NONE
